# Haskell-Course-2026

./: .gitignore
homeworks/hw1/: Solution.hs
homeworks/hw2/: Solution.hs
homeworks/hw3/: Solution.hs
homeworks/hw4/: Solution.hs
homeworks/hw5/: Solution.hs
project/src/: AST.hs  Engine.hs  Main.hs  Optimizer.hs  Parser.hs  Tests.hs  UnitTests.hs  description.md  sqlliteclone.cabal
project/src/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
